--- a/02-贝塞尔曲线的控制.html
+++ b/02-贝塞尔曲线的控制.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>贝塞尔曲线控制</title>
+    <title>测试</title>
     <style>
         canvas{
             border:1px solid red;
